[package]
name = "kafka-producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_derive = "1.0"
url = "2.1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tungstenite = { version= "0.20.1", features = ["native-tls"]}
base64 = "0.21.4"
rand = "0.8.5"
hex = "0.4.3"
rust_decimal = "1.17.0"
bigdecimal = "0.4.2"
thiserror = "1.0.50"
rdkafka = "0.36.2"
serde_json = "1.0.111"
tracing-subscriber = { version = "0.3.16", features = ["json"] }
tracing = "0.1.40"
chrono = { version = "0.4.31", features = [] }
tracing-appender = "0.2.3"
tokio = { version = "0.2.22", features = ["full"] }
